formatted task entry to charactor entry format

--- a/Thibodeau_Ashley_CE03/MainPage.xaml
+++ b/Thibodeau_Ashley_CE03/MainPage.xaml
@@ -16,7 +16,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button x:Name="addButton" Text="+" HorizontalOptions="End"/>
+        <Button x:Name="addButton" Text="+" HorizontalOptions="End" FontSize="24" Margin="15"/>
     </StackLayout>
 
 </ContentPage>
