--- a/Thibodeau_Ashley_CE03/TaskEntryPage.xaml
+++ b/Thibodeau_Ashley_CE03/TaskEntryPage.xaml
@@ -1,7 +1,25 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Thibodeau_Ashley_CE03.TaskEntryPage">
- <StackLayout Margin="20">
-  <Editor x:Name="taskEditor" Placeholder="Enter your Task" HeightRequest="150"/>
+
+    <StackLayout Margin="20">
+     <Frame BackgroundColor="#9421F3" Padding="24" CornerRadius="0">
+        <Label Text="Character Entry" HorizontalTextAlignment="Center" TextColor="White" FontSize="30"/>
+    </Frame>
+     <Entry x:Name="nameEntry" Placeholder="Enter Name Here"/>
+     <Entry x:Name="alignmentEntry" Placeholder="Enter Characters Alignment"/>
+     <Grid>
+         <Grid.ColumnDefinitions>
+             <ColumnDefinition Width="*" />
+         </Grid.ColumnDefinitions>
+         <Grid.RowDefinitions>
+             <RowDefinition Height="*" />
+         </Grid.RowDefinitions>
+         <Label Text="Level:" VerticalTextAlignment="Center"/>
+         <Stepper x:Name="levelStepper" Minimum="0" Maximum="100" Increment="1" Grid.Column="1"/>
+         <Label x:Name="classPickerImage" Grid.Row="1"/>
+         <Picker x:Name="classPicker" Title="Pick Your Class" Grid.Row="1" Grid.Column="1"/>
+     </Grid>
+     
      <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
          <Button x:Name="saveButton" Text="Save" HorizontalOptions="StartAndExpand"/>
          <Button x:Name="deleteButton" Text="Delete" HorizontalOptions="EndAndExpand"/>
