--- a/Thibodeau_Ashley_CE03/App.xaml
+++ b/Thibodeau_Ashley_CE03/App.xaml
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!--/*
+    Ashley Thibodeau
+    Interface Programming
+    C20210201
+    Code Exercise 03
+
+    GitHub Repo: https://github.com/InterfaceProgramming/ce3-ThibodeauAshley-FS
+ 
+ */-->
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Thibodeau_Ashley_CE03.App">
