adjusted character entry for image size, added small error check for entries

--- a/Thibodeau_Ashley_CE03/CharacterEntryPage.xaml
+++ b/Thibodeau_Ashley_CE03/CharacterEntryPage.xaml
@@ -12,32 +12,31 @@
 -->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Thibodeau_Ashley_CE03.CharacterEntryPage">
 
-    <StackLayout Margin="20">
-     <Frame BackgroundColor="#9421F3" Padding="10" CornerRadius="0">
+<StackLayout Margin="20" Padding="15">
+
+    <Frame BackgroundColor="#9421F3" Padding="10" CornerRadius="0">
         <Label Text="Character Entry" HorizontalTextAlignment="Center" TextColor="White" FontSize="30"/>
     </Frame>
-     <Entry x:Name="nameEntry" Placeholder="Enter Name Here"/>
-     <Entry x:Name="alignmentEntry" Placeholder="Enter Characters Alignment"/>
-     <Grid>
-         <Grid.ColumnDefinitions>
-             <ColumnDefinition Width="*" />
-         </Grid.ColumnDefinitions>
-         <Grid.RowDefinitions>
-             <RowDefinition Height="*" />
-         </Grid.RowDefinitions>
 
-         <Label x:Name="levelLabel" Text="Level:" VerticalTextAlignment="Center"/>
-         <Stepper x:Name="levelStepper" Minimum="0" Maximum="100" Increment="1" Grid.Column="1"/>
-         <Image x:Name="classPickerImage" Source="" Grid.Row="1"/>
-         <Picker x:Name="classPicker" Title="Choose a Class" Grid.Row="1" Grid.Column="1">
-             
-         </Picker>
-         
-     </Grid>
-     
-     <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-         <Button x:Name="saveButton" Text="Save" HorizontalOptions="StartAndExpand"/>
-         <Button x:Name="deleteButton" Text="Delete" HorizontalOptions="EndAndExpand"/>
-     </StackLayout>
- </StackLayout>
+    <Entry x:Name="nameEntry" Placeholder="Enter Name Here"/>
+    <Entry x:Name="alignmentEntry" Placeholder="Enter Characters Alignment"/>
+
+    <StackLayout Orientation="Horizontal">
+        <Label x:Name="levelLabel" Text="Level:" VerticalTextAlignment="Center"/>
+        <Stepper x:Name="levelStepper" Minimum="0" Maximum="100" Increment="1" HorizontalOptions="EndAndExpand"/>
+    </StackLayout>
+
+    <StackLayout Orientation="Horizontal">
+        <Image x:Name="classPickerImage" Source="" HeightRequest="100" VerticalOptions="Center"/>
+        <Picker x:Name="classPicker" Title="Choose a Class" HorizontalOptions="EndAndExpand"/>
+    </StackLayout> 
+
+    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+        <Button x:Name="saveButton" Text="Save" HorizontalOptions="StartAndExpand"/>
+        <Button x:Name="deleteButton" Text="Delete" HorizontalOptions="EndAndExpand"/>
+    </StackLayout>
+
+    <Label x:Name="errorLabel" Text="Error" HorizontalTextAlignment="Center" FontSize="18" TextColor="Red" IsVisible="False"/>
+
+</StackLayout>
 </ContentPage>
